# webrtc-player

./: .gitignore  Cargo.toml  README-en.md  README.md  build.rs
.cargo/: config.toml
_scripts/: common.just  linux.just  windows.just
cpp-whep-player/: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc  packages.lua  xmake.lua
cpp-whep-player/src/: logger.h  main.cc
docs/: just.md  rust.md  windows.md
docs/rust/: rust.md  tracing.md
examples/: Cargo.toml  README.md
examples/examples/: tracing.rs
golang-whep-player/: README.md  go.mod  go.sum  main.go
golang-whep-player/media/: decoder.go
golang-whep-player/whep/: client.go
src/: client.rs  logger.rs  main.rs
whep-player/: Cargo.toml  README.md  build.rs
whep-player/src/: client.rs  encoder.rs  lib.rs  main.rs  util.rs  whip.rs
