[package]
name = "whep-player"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.4", features = ["derive", "color"] }
ffmpeg-sys-next = { version = "7.1.0" }
ffmpeg-next = { version = "7.1.0" }
str0m = { version = "0.5.1" }
sdl2 = { version = "0.37.0", features = ["bundled"] }
anyhow = "1.0.76"
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
reqwest = "0.11.23"
local-ip-address = "0.6.1"
serde = "1.0.136"
futures = "0.3.29"
log = "0.4.21"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-eyre = "0.6.5"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
